# cua-conformal-guard

./: .gitignore  LICENSE  README.md  pyproject.toml
cua_guard/: __init__.py  audit.py  cli.py  evaluation.py  io.py  types.py
cua_guard/adapters/: __init__.py  base.py  json_adapter.py  osworld.py  playwright.py  selenium.py
cua_guard/classifiers/: __init__.py  base.py  loader.py  naive_bayes.py  rules.py
cua_guard/conformal/: __init__.py  gcrc.py  trajectory.py
cua_guard/runtime/: __init__.py  agent.py  environment.py  guard.py  runner.py
docs/: CONCEPTS.md  DATA_FORMAT.md  DESIGN.md  GETTING_STARTED.md
examples/: calibration_actions.jsonl  calibration_trajectories.jsonl  escalation_callback.py  integrate_with_agent.py  test_actions.jsonl  train_actions.jsonl
tests/: test_adapters.py  test_cli.py  test_evaluation.py  test_gcrc.py  test_guard_runtime.py  test_naive_bayes.py  test_trajectory_calibration.py  test_types.py
