[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cua-conformal-guard"
version = "0.2.0"
description = "A self-contained conformal danger gate for computer-use agents."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "CUA Guard Contributors" }]
license = { text = "MIT" }

[project.scripts]
cua-guard = "cua_guard.cli:main"

[tool.setuptools.packages.find]
include = ["cua_guard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
